--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@
 - docker build -t udagram-api-feed ./udagram-api-feed
 # Do similar for other three images
 # Tagging
-- docker tag udagram-api-feed sudkul/udagram-api-feed:v1
+- docker tag udagram-api-feed tamhv/udagram-api-feed:v1
 # Do similar for other three images
 # Push
 # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push sudkul/udagram-api-feed:v1
+- docker push tamhv/udagram-api-feed:v1
 # Do similar for other three images
 
