--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,15 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker-compose -f docker-compose-build.yaml build --parallel
-  - docker tag udagram-api-feed tamhv/udagram-api-feed:v1
-  - docker tag udagram-api-feed tamhv/udagram-api-user:v1
-  - docker tag udagram-api-feed tamhv/udagram-reverseproxy:v1
-  - docker tag udagram-api-feed tamhv/udagram-frontend:v1
+  - docker tag udagram-api-feed tamhv/udagram-api-feed:v2
+  - docker tag udagram-api-user tamhv/udagram-api-user:v2
+  - docker tag udagram-reverseproxy tamhv/udagram-reverseproxy:v2
+  - docker tag udagram-frontend tamhv/udagram-frontend:v2
 
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push tamhv/udagram-api-feed:v1
-  - docker push tamhv/udagram-api-feed:v1
-  - docker push tamhv/udagram-api-user:v1
-  - docker push tamhv/udagram-reverseproxy:v1
-  - docker push tamhv/udagram-frontend:v1
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+  - docker push tamhv/udagram-api-feed:v2
+  - docker push tamhv/udagram-api-user:v2
+  - docker push tamhv/udagram-reverseproxy:v2
+  - docker push tamhv/udagram-frontend:v2
 
