--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - docker-compose -f docker-compose-build.yaml build --parallel
   - docker tag udagram-api-feed tamhv/udagram-api-feed:v2
   - docker tag udagram-api-user tamhv/udagram-api-user:v2
-  - docker tag udagram-reverseproxy tamhv/udagram-reverseproxy:v2
+  - docker tag reverseproxy tamhv/udagram-reverseproxy:v2
   - docker tag udagram-frontend tamhv/udagram-frontend:v2
 
 after_success:
