--- a/udagram-deployment/udagram-frontend-service.yml
+++ b/udagram-deployment/udagram-frontend-service.yml
@@ -17,5 +17,12 @@ spec:
       containers:
       - image: tamhv/udagram-frontend:v1
         name: udagram-frontend
+        resources:
+          limits:
+            memory: 256Mi
+            cpu: "1"
+          requests:
+            memory: 256Mi
+            cpu: "0.2"
         ports:
         - containerPort: 8100
