--- a/udagram-deployment/backend-feed-deployment.yaml
+++ b/udagram-deployment/backend-feed-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: udagram-api-feed
-        image: tamhv/tamhv/udagram-api-feed:v1
+        image: tamhv/udagram-api-feed:v1
         resources:
           limits:
             memory: 256Mi
