--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -11,5 +11,11 @@ data:
   AWS_REGION: us-east-1
   AWS_PROFILE: test
   JWT_SECRET: testing
-  URL: http://10.107.5.221:8100
+  URL: http://10.106.86.252:8100
+  config: |
+    address-pools:
+      - name: default
+        protocol: layer2
+        addresses:
+        - 192.168.1.240-192.168.1.250
 
