--- a/udagram-deployment/backend-reverseproxy-deployment.yml
+++ b/udagram-deployment/backend-reverseproxy-deployment.yml
@@ -16,13 +16,6 @@ spec:
     spec:
       containers:
       - name: udagram-reverseproxy	
-        image: tamhv/udagram-reverseproxy:v1
-        resources:
-          limits:
-            memory: 256Mi
-            cpu: "1"
-          requests:
-            memory: 256Mi
-            cpu: "0.2"
+        image: tamhv/reverseproxy:v3
         ports:
         - containerPort: 8080
