--- a/udagram-deployment/aws-secret.yaml
+++ b/udagram-deployment/aws-secret.yaml
@@ -7,3 +7,5 @@ metadata:
 data:
   aws_access_key_id: AKIA4AN42BJCKCKJGSLQ
   aws_secret_access_key: WlNubFBTdlMwNGlGMXcxSzhGQVZwNlpHNkJjMXMwWUtPNGVhNHdUTg==
+  POSTGRES_USERNAME: postgres
+  POSTGRES_PASSWORD: postgres
