--- a/udagram-deployment/backend-reverseproxy-deployment.yml
+++ b/udagram-deployment/backend-reverseproxy-deployment.yml
@@ -15,7 +15,9 @@ spec:
         app: my-app
     spec:
       containers:
-      - name: udagram-reverseproxy	
-        image: tamhv/reverseproxy:v3
+      - name: backend-reverseproxy	
+        image: tamhv/reverseproxy:v5
         ports:
-        - containerPort: 8080
+        - containerPort: 80
+        envFrom:
+          - configMapRef:  { name: env-configmap }
