--- a/udagram-deployment/backend-user-service.yaml
+++ b/udagram-deployment/backend-user-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-service
+  name: backend-user
   labels:
-    run: my-app
+    run: backend-user
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: my-app
+    run: backend-user
