--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -5,13 +5,15 @@ metadata:
   labels:
     app: my-app
 data:
-  POSTGRES_HOST: localhost
+  POSTGRES_HOST: database-2.cpwotfwixilf.us-east-1.rds.amazonaws.com
   POSTGRES_DB: postgres
+  POSTGRES_USERNAME: postgres
+  POSTGRES_PASSWORD: postgres
   AWS_BUCKET: arn:aws:s3:::my-825566562884-bucket
   AWS_REGION: us-east-1
   AWS_PROFILE: test
   JWT_SECRET: testing
-  URL: http://10.106.86.252:8100
+  URL: http://10.106.240.9:8100
   config: |
     address-pools:
       - name: default
