--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,14 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker-compose -f docker-compose-build.yaml build --parallel
-  - docker tag udagram-api-feed tamhv/udagram-api-feed:v6
-  - docker tag udagram-api-user tamhv/udagram-api-user:v6
-  - docker tag reverseproxy tamhv/reverseproxy:v5
-  - docker tag udagram-frontend:local tamhv/udagram-frontend:v6
+  - docker tag udagram-api-feed tamhv/udagram-api-feed:v8
+  - docker tag udagram-api-user tamhv/udagram-api-user:v8
+  - docker tag reverseproxy tamhv/reverseproxy:v8
+  - docker tag udagram-frontend tamhv/udagram-frontend:v8
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push tamhv/udagram-api-feed:v6
-  - docker push tamhv/udagram-api-user:v6
-  - docker push tamhv/reverseproxy:v6
-  - docker push tamhv/udagram-frontend:v6
+  - docker push tamhv/udagram-api-feed:v8
+  - docker push tamhv/udagram-api-user:v8
+  - docker push tamhv/reverseproxy:v8
+  - docker push tamhv/udagram-frontend:v8
