--- a/udagram-deployment/env-secret.yaml
+++ b/udagram-deployment/env-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
     app: udagram
 data:
-  POSTGRES_USERNAME: postgres
-  POSTGRES_PASSWORD: postgres
+  POSTGRES_USERNAME: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: cG9zdGdyZXM=
