--- a/udagram-deployment/udagram-frontend-service.yml
+++ b/udagram-deployment/udagram-frontend-service.yml
@@ -2,27 +2,27 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/name: load-balancer-example
+    app: load-balancer-example
   name: udagram-frontend
 spec:
-  replicas: 5
+  replicas: 3
   selector:
     matchLabels:
-      app.kubernetes.io/name: load-balancer-example
+      app: load-balancer-example
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: load-balancer-example
+        app: load-balancer-example
     spec:
       containers:
-      - image: tamhv/udagram-frontend:v4
+      - image: tamhv/udagram-frontend:v8
         name: udagram-frontend
         resources:
           limits:
-            memory: 256Mi
+            memory: 1024Mi
             cpu: "1"
           requests:
-            memory: 256Mi
+            memory: 1024Mi
             cpu: "0.2"
         ports:
         - containerPort: 8100
